wallet/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wallet
spec:
  containers:
  - name: electrumsv
    image: electrumsv/payd:develop
    ports:
    - containerPort: 8332
    - containerPort: 9999
    volumeMounts:
      - name: esv-volume
        mountPath: "/root/.electrum-sv"
    command: ["python3"]
    args:
      - electrum-sv
      - daemon
      - -v=debug
      - --enable-node-wallet-api
      - -rpcpassword=
      - -walletnotify="python3 contrib/scripts/jsonrpc_wallet_event.py %s"
  volumes:
    - name: esv-volume
      persistentVolumeClaim:
        claimName: esv-volume-claim
