wallet/json-rpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: json-rpc
spec:
  selector:
    app: json-rpc
  ports:
    - port: 8332
