wallet/wallet-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-api
spec:
  selector:
    app: wallet-api
  ports:
    - port: 9999
